# metaseed

./: Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json
backend/: package-lock.json  package.json  requirements.txt  server.js
backend/files/: data-file-example.xlsx
backend/models/: faceads.js  kanban.js  lead.js  metaseed.js  user.js
backend/routes/: authRoutes.js  automatizationRoutes.js  faceadsRoutes.js  kanbanRoutes.js  leadRoutes.js  userRoutes.js
backend/scripts/: pyproject.toml  python-script.py  requirements.txt  script-01.py  script-02.py  script-03.py  script-04.py  script-05.js  script-06.py  script-07.py  test-environment.py
backend/scripts/scripts/: script-01.py  script-02.py  script-03.py  script-05.py
components/: LandingPageHeader.vue  LoginField.vue  MainFooter.vue  MainHeader.vue  Tutorial.vue
components/ClientPage/: AccordionSideBar.vue  SideBar.vue  TopDashboard.vue
components/LandingPage/: Section-Form.vue
components/SigninPage/: LoginField.vue
frontend/: nuxt.config.js  package-lock.json  package.json
frontend/components/: FormField.vue  MainButton.vue  MainFooter.vue  MainHeader.vue  MessageWarning.vue  ModalSuccess.vue  ModalYesNo.vue  PerfilPhotoHeader.vue  SmallButton.vue
frontend/components/SigninPage/: LoginField.vue
frontend/middleware/: auth.js
frontend/pages/: index.vue
frontend/plugins/: vuex-persist.js
frontend/store/: index.js
frontend/test/: NuxtLogo.spec.js
middleware/: auth.js
pages/: index.vue
pages/auth/: signin.vue  singout.vue
pages/client/: home.vue
store/: index.js
(+61 files in other folders)
